# surgi_print_dn

./: .gitignore  MANIFEST.in  MANUAL_SETUP.md  PRODUCTION_SETUP.md  QUICK_REFERENCE.md  README.md  WEBHOOK_SETUP.md  build.json  cups_webhook_bridge.py  hooks.py  package.json  pyproject.toml  requirements.txt  setup-services-fixed.sh  setup-services.sh  setup.cfg  setup.py  surgi-print-ngrok.service  surgi-print-webhook.service  test_cups_connection.py  webhook_requirements.txt
public/js/: delivery_note_print  delivery_note_print.js  dn_print.js
surgi_print/: __init__.py  api.py  hooks.py  modules.txt  setup.py
surgi_print/public/js/: delivery_note.js  delivery_note2.js  delivery_note_print.js
surgi_print_dn/: __init__.py  api.py  hooks.py  modules.txt
surgi_print_dn/public/js/: dn_print.js
