[project]
name = "surgi_print"
authors = [
    { name = "Gary Starr", email = "gary.starr@SurgiShop.com"}
]
description = "surgi_print"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.84.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
