[build-system]
# Specify the minimum build requirements for the project
requires = [
    "setuptools>=61.0.0",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
# Specify the backend (the tool that will perform the build)
build-backend = "setuptools.build_meta"

[project]
# Basic metadata for the project
name = "surgi_print_dn" # Use the standard hyphenated name convention
version = "0.0.5"
description = "A description of the surgi_print application."
# Set the version dynamically using git tags/commits
requires-python = ">=3.10"
# dynamic = ["version"] 

# Specify dependencies (add any packages your app needs to run)
dependencies = [
      # "frappe>=15.0.0", # Example Frappe dependency
      "pycups>=2.0.1",
      "requests",
]
readme = "README.md"
license = "MIT"
authors = [
  {name = "Gary Starr", email = "gary.starr@surgishop.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Change if needed
    "Operating System :: OS Independent",
]

[tool.setuptools_scm]
# Configuration for setuptools_scm to manage versioning automatically
write_to = "surgi_print_dn/_version.py" # Adjust this path if necessary

# Optional: Add configurations for common developer tools below
#
# [tool.black]
# line-length = 88
# target-version = ['py310']

# [tool.mypy]
# strict = true
