[metadata]
# Most simple project metadata can be defined in pyproject.toml now.
# This section is primarily for additional fields like keywords or URLs.
# You can uncomment and fill these out if needed:
# keywords = frappe, erpnext, custom-app, surgiprint
# home_page = https://github.com/your-org/surgi_print_dn
# project_urls =
#     Documentation = https://surgiprint.readthedocs.io/
# test

[options]
# The package name must match the actual folder name containing your Python modules.
packages = find:
# The directory where your source code resides (usually the current directory)
# package_dir =
#   = .
# Python versions this package supports
python_requires = >=3.10

# Include non-Python files (like static assets, templates, etc.) in the package
include_package_data = True

# Installation data for Frappe/ERPNext apps
# Assuming your app folder is named 'surgi_print_dn'
install_requires =
    # This is critical for Frappe/ERPNext apps
    frappe>=15.0.0
    erpnext>=15.0.0
    pycups>=2.0.1
    # Any other core dependencies (e.g., requests, numpy)

# [options.packages.find]
# Tells setuptools where to look for package directories
# Assuming the main app directory is 'surgi_print_dn'
# where = .
# include = surgi_print_dn
# Exclude test files, build artifacts, etc.
# exclude =
    # tests*
    # docs*
    # build*
    # dist*

# Frappe/ERPNext specific configuration for automatic app discovery
# [options.entry_points]
# frappe.apps =
   # surgi_print_dn = surgi_print_dn

# Optional: Configuration for development/testing environments
# [options.extras_require]
# testing =
    # pytest
    # coverage

# [tool:pytest]
# Basic pytest configuration
# testpaths = tests
# addopts = --strict-markers
